--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,38 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(Logger VERSION 0.1.0)
+
+project(Logger VERSION 0.1.1)
 
 set(CMAKE_CXX_STANDARD 17)
-include(CTest)
-enable_testing()
 
-add_executable(Logger Logger.cpp AsyncLogging.cpp AsyncLogging.h FixBuffer.hpp FixBuffer.hpp FixBuffer.hpp)
-add_subdirectory(test1)
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-target_link_libraries(Logger
-    pthread
+message(BEGIN BUILD)
+
+file(GLOB SRC ./*cpp ./*hpp)
+
+if (NOT "${SRC}" STREQUAL "")
+    message(src successful)
+endif ()
+
+file(GLOB DIR ./*h)
+
+if (NOT "${DIR}" STREQUAL "")
+    message(dir successful)
+endif ()
+
+add_library(${PROJECT_NAME} ${SRC})
+
+target_include_directories(
+        ${PROJECT_NAME}
+        PUBLIC ${DIR}
 )
-include(CPack)
+target_link_libraries(
+        ${PROJECT_NAME}
+        pthread
+)
+option(ABLE_TEST "enable_test" TRUE)
+
+if (ABLE_TEST)
+    message(ENABLE_TEST)
+    add_subdirectory(test1)
+endif ()
+
+message(END BUILD)
