--- a/test1/CMakeLists.txt
+++ b/test1/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_executable(test1 test.cc)
-target_link_libraries(test1
+add_executable(test test.cc)
+
+target_link_libraries(
+        test
         ${PROJECT_NAME}
 )
